add animations ,and fonts,colors

--- a/prototype.html
+++ b/prototype.html
@@ -289,7 +289,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">Green AI</a>
+            <a href="/index.html" class="logo">Green AI</a>
             <ul>
                 <li><a href="index.html">მთავარი</a></li>
                 <li><a href="prototype.html">პროტოტიპი</a></li>
