--- a/about.html
+++ b/about.html
@@ -235,9 +235,9 @@
 <body>
     <header>
         <nav>
-            <a href="index.html" class="logo">Green AI</a>
+            <a href="/index.html" class="logo">Green AI</a>
             <ul>
-                <li><a href="index.html">მთავარი</a></li>
+                <li><a href="/index.html">მთავარი</a></li>
                 <li><a href="prototype.html">პროტოტიპი</a></li>
                 <li><a href="about.html">ჩვენს შესახებ</a></li>
                 <li><a href="team.html">გუნდი</a></li>
